@@ -17,6 +17,8 @@
       <option value="option1">Test 1</option>
       <option value="option2">Test 2</option>
     </select>
+    <input type="checkbox" value="0"/>
+    <input type="radio" value="Milk"/>
   </div>
 </body>
 </html>
